# praktika1

./: .dockerignore  .gitignore  Dockerfile  pyproject.toml
houseprice/: house-prices-prediction-using-tfdf.ipynb
my-project/: pyproject.toml
my-project/src/: app.py  depends.py
my-project/src/routing/: Healthcheck_rout.py
my-project/src/services/: Healthcheck_serv.py
src/: Dockerfile  app.py  depends.py
src/models/: Healthcheck_mod.py  healthcheck_models.py
src/repositories/: Healthcheck_rep.py
src/routing/: Healthcheck_rout.py  healthcheck_routing.py
src/services/: Healthcheck_serv.py  healthcheck_services.py
tests/: conftest.py  test_healthcheck.py
