[project]
name = "praktika"
version = "0.1.0"
description = ""
authors = [
    {name = "CrazyDanon43",email = "daniilsh43@mail.ru"}
]
readme = "README.md"
requires-python = ">=3.11"
package-mode = false
dependencies = [
    "fastapi (>=0.115.14,<0.116.0)",
    "pytest (>=8.4.1,<9.0.0)",
    "datetime (>=5.5,<6.0)",
    "uvicorn (>=0.35.0,<0.36.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.test.dependencies]
pytest = "^8.4.1"

