[project]
name = "my-project"
version = "0.1.0"
description = ""
authors = [
    {name = "CrazyDanon43",email = "daniilsh43@mail.ru"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
]

[tool.poetry]
packages = [{include = "my_project", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
